fix_header_again_z-index

--- a/front/src/App/components/Header/Header.module.scss
+++ b/front/src/App/components/Header/Header.module.scss
@@ -28,6 +28,9 @@
 
 }
 .header {
+  position: relative;
+  z-index: 1;
+  // as background is above header.
   padding: 60px 0;
   display: flex;
   align-items: center;
